--- a/Diwali_Sales_Analysis.ipynb
+++ b/Diwali_Sales_Analysis.ipynb
@@ -821,7 +821,7 @@
    "source": [
     "## Conclusion:\n",
     "\n",
-    "### *UnMarried women age group 26-35 yrs from UP,  Maharastra and Karnataka working in IT, Healthcare and Aviation are more likely to buy products from Food, Clothing and Electronics category.*"
+    "### *Unmarried women age group 26-35 yrs from UP,  Maharastra and Karnataka working in IT, Healthcare and Aviation are more likely to buy products from Food, Clothing and Electronics category.*"
    ]
   }
  ],
